force-app/main/default/objects/APEX_Job_Shweta__c/APEX_Job_Shweta__c.object-meta.xml
<CustomObject>
    <description>Information about job profile....</description>
    <label>Job_Shweta</label>
    <nameField>
        <displayFormat>JOB-{0000}</displayFormat>
        <label>Job_Shweta Name1</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job_Shwetas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>