force-app/main/default/objects/APEX_Job_Shweta__c/fields/APEX_ApplicantCout__c.field-meta.xml
<CustomField>
    <fullName>APEX_ApplicantCout__c</fullName>
    <label>ApplicantCout</label>
    <summaryFilterItems>
        <field>Candidate_Shweta__c.APEX_Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>Candidate_Shweta__c.APEX_JOB_Shwetajob__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>