force-app/main/default/objects/APEX_Job_Shweta__c/fields/APEX_Description__c.field-meta.xml
<CustomField>
    <fullName>APEX_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>