force-app/main/default/objects/APEX_Job_Shweta__c/fields/APEX_ExpireOn__c.field-meta.xml
<CustomField>
    <fullName>APEX_ExpireOn__c</fullName>
    <label>ExpireOn</label>
    <type>Date</type>
</CustomField>