force-app/main/default/objects/APEX_Job_Shweta__c/fields/APEX_JobPositins__c.field-meta.xml
<CustomField>
    <fullName>APEX_JobPositins__c</fullName>
    <label>JobPositins</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>