force-app/main/default/objects/APEX_Job_Shweta__c/fields/APEX_Manager__c.field-meta.xml
<CustomField>
    <fullName>APEX_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job_Shwetas</relationshipLabel>
    <relationshipName>Job_Shwetas</relationshipName>
    <type>Lookup</type>
</CustomField>