force-app/main/default/objects/APEX_Job_Shweta__c/fields/APEX_Name__c.field-meta.xml
<CustomField>
    <fullName>APEX_Name__c</fullName>
    <displayFormat>JOB-{000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>