force-app/main/default/objects/APEX_Job_Shweta__c/fields/APEX_NoOfPosition__c.field-meta.xml
<CustomField>
    <fullName>APEX_NoOfPosition__c</fullName>
    <label>NoOfPosition</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>