force-app/main/default/objects/APEX_Job_Shweta__c/fields/APEX_RequiredSkills__c.field-meta.xml
<CustomField>
    <fullName>APEX_RequiredSkills__c</fullName>
    <label>RequiredSkills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>APEX_JobPositins__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>People Skills</fullName>
            </value>
            <value>
                <fullName>Team Player</fullName>
            </value>
            <value>
                <fullName>Self Management</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>.Net</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Linux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>