force-app/main/default/objects/APEX_Job_Shweta__c/fields/APEX_SalaryOffered__c.field-meta.xml
<CustomField>
    <fullName>APEX_SalaryOffered__c</fullName>
    <label>SalaryOffered</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>