force-app/main/default/objects/APEX_Job_Shweta__c/fields/CerificationRequired__c.field-meta.xml
<CustomField>
    <fullName>CerificationRequired__c</fullName>
    <label>CerificationRequired</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>APEX_JobPositins__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PMP (Project Management Professional)</fullName>
            </value>
            <value>
                <fullName>CMP (Certified Project Manager)</fullName>
            </value>
            <value>
                <fullName>MPM (Master Project Manager)</fullName>
            </value>
            <value>
                <fullName>Sun Certified</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>ORACLE</fullName>
            </value>
            <value>
                <fullName>Sybase</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>CISCO</fullName>
            </value>
            <value>
                <fullName>RedHat</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>