force-app/main/default/objects/APEX_Job_Shweta__c/fields/QualificationRequired__c.field-meta.xml
<CustomField>
    <fullName>QualificationRequired__c</fullName>
    <label>QualificationRequired</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>APEX_JobPositins__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bcom</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BTech.</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>